<resources>
    <string name="app_name">ArchAngel</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account_sign_up">Create an account-> Sign Up</string>
    <string name="already_signed_up">Already signed Up</string>
    <string name="email">  Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_sign_in"><![CDATA[Already have an account?->Sign in]]></string>
    <string name="welcome_archangel_dashboard">Archangel Dashboard</string>
    <string name="sign_out">Sign Out</string>
    <string name="location">Location</string>
    <string name="get_location">Get Location</string>
    <string name="alarmOn">S.O.S</string>
    <string name="alarmOff">Stop Alarm</string>
    <string name="msg_error">No FlashLight Available</string>
    <string name="flashAvailable">FlashLight Available</string>
    <string name="active_mode">Active Mode</string>
    <string name="sleep_mode">Stop</string>
    <string name="take_picture">Take Picture</string>
    <string name="camera_button">Camera Button</string>
    <string name="contact_name">Contact Name</string>
    <string name="choose_your_contacts">Contacts</string>
    <string name="phone_number">Phone Number</string>
    <string name="choose_contact1">Choose First Contact</string>
    <string name="choose_contact2">Choose Second Contact</string>
    <string name="next">Next</string>
    <string name="app_logo">App Logo</string>
    <string name="address">Address</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">UserName:</string>
    <string name="info_archangel_com">info@archangel.com</string>
    <string name="checkbox">Show Password</string>
    <string name="silent_off">Silent Off</string>
    <string name="silent_on">Silent On</string>
    <string name="picture_taken">Picture Taken</string>
</resources>