<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsMarkerActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_archangel_dashboard"
        android:textColor="#101011"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/show_location"
        app:layout_constraintEnd_toStartOf="@+id/activeSleepModebtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="95dp"
        android:layout_height="52dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Alarmbtn"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <TextView
        android:id="@+id/show_location"
        android:layout_width="389dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:hint="@string/location"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeSleepModebtn" />

    <Button
        android:id="@+id/Alarmbtn"
        android:layout_width="171dp"
        android:layout_height="85dp"
        android:text="@string/alarmOn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TakePicBtn"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <Button
        android:id="@+id/activeSleepModebtn"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/active_mode"
        app:layout_constraintBottom_toTopOf="@+id/show_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signUpTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="390dp"
        android:layout_height="358dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Alarmbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_location"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity"
        tools:layout="@android:layout/simple_gallery_item" />

    <Button
        android:id="@+id/TakePicBtn"
        android:layout_width="95dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/camera_button"
        android:text="@string/take_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Alarmbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />


</androidx.constraintlayout.widget.ConstraintLayout>