<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="225dp"
    android:background="@drawable/gradient_1"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="227dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:backgroundTint="#1CFFFFFF"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@mipmap/logo_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@drawable/nav_header"
        android:gravity="center"
        android:paddingTop="8dp"
        android:text="@string/username"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userEmailTextView"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:background="@drawable/nav_header"
        android:gravity="center"
        android:text="@string/info_archangel_com"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>