<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@drawable/gradient_1"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/activeSleepModebtn"
            android:layout_width="115dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="28dp"
            android:layout_toStartOf="@+id/show_location"
            android:background="@drawable/button_active_mode"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/active_mode"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_location"
            android:layout_width="266dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="0dp"
            android:background="@drawable/address"
            android:gravity="center|start|end"
            android:hint="@string/address"
            android:textAlignment="center"
            android:textSize="16sp" />
    </RelativeLayout>

    <fragment
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="495dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout="@android:layout/simple_gallery_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/gradient_1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/TakePicBtn"
            android:layout_width="95dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/Alarmbtn"
            android:contentDescription="@string/camera_button"
            android:padding="3dp"
            android:background="@drawable/contact_background"
            android:textColor="#ffff"
            android:text="@string/take_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Alarmbtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Alarmbtn"
            android:layout_width="168dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/panic_button"
            android:drawableStart="@drawable/ic_send_"
            android:drawablePadding="0dp"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/alarmOn"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/silentBtb"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/TakePicBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/silentBtb"
            android:layout_width="95dp"
            android:layout_height="52dp"
            android:layout_alignParentEnd="false"
            android:layout_centerVertical="true"
            android:text="@string/silent_off"
            android:background="@drawable/contact_background"
            android:textColor="#ffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/Alarmbtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>