<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/gradient_1"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/loadContact2Btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/choose_contact2"
        android:textSize="16sp"
        android:textColor="#ffff"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/nextPageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView2"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="218dp" />

    <TextView
        android:id="@+id/nameSelected2TextView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/contact_background2"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneSelected2TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/contactNameTextView2"
        app:layout_constraintTop_toBottomOf="@+id/loadContact1Btn"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="200dp" />

    <TextView
        android:id="@+id/phoneNumberTextView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/contact_background"
        android:gravity="center"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/loadContact2Btn"
        app:layout_constraintEnd_toStartOf="@+id/phoneSelected2TextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactNameTextView2" />

    <TextView
        android:id="@+id/contactNameTextView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/contact_background"
        android:gravity="center"
        android:text="@string/contact_name"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberTextView2"
        app:layout_constraintEnd_toStartOf="@+id/nameSelected2TextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadContact1Btn" />

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/contact_background"
        android:gravity="center"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loadContact1Btn"
        app:layout_constraintEnd_toStartOf="@+id/phoneSelected1TextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactNameTextView" />

    <Button
        android:id="@+id/loadContact1Btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/choose_contact1"
        android:textSize="16sp"
        android:textColor="#ffff"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/nameSelected2TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="218dp" />

    <TextView
        android:id="@+id/nameSelected1TextView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/contact_background2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#090909"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneSelected1TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/contactNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="200dp" />

    <TextView
        android:id="@+id/phoneSelected1TextView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autoLink="phone"
        android:background="@drawable/contact_background2"
        android:inputType="phone"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loadContact1Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/phoneNumberTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameSelected1TextView"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="200dp" />

    <TextView
        android:id="@+id/phoneSelected2TextView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autoLink="phone"
        android:background="@drawable/contact_background2"
        android:inputType="phone"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loadContact2Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/phoneNumberTextView2"
        app:layout_constraintTop_toBottomOf="@+id/nameSelected2TextView"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="200dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_contacts"
        android:textAlignment="center"
        android:textColor="#041b1b"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nameSelected1TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/contact_background"
        android:gravity="center"
        android:text="@string/contact_name"
        android:textColor="#ffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberTextView"
        app:layout_constraintEnd_toStartOf="@+id/nameSelected1TextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/nextPageBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="296dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/button_background"
        android:text="@string/next"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadContact2Btn" />


</androidx.constraintlayout.widget.ConstraintLayout>